finished index and contact

--- a/src/contact.html
+++ b/src/contact.html
@@ -153,7 +153,22 @@
                                    required="required"
                                    autofocus="autofocus" maxlength="20"/>
                         </div>
-                        <br/>
+
+                        <div>
+
+                            <label>Compañia:</label>
+                            <input name="empresa" class="form-poshytip" id="empresa" type="text"
+                                   placeholder="Nombre Compañia"
+
+                                   autofocus="autofocus" maxlength="20"/>
+                        </div>
+
+                        <div>
+                            <label>Teléfono:</label>
+                            <input name="telefono" class="form-poshytip" id="telefono" type="tel"
+                                   placeholder="011-4444-4444"
+                                   />
+                        </div>
 
                         <div>
                             <label>E-mail:</label>
@@ -161,7 +176,6 @@
                                    placeholder="ejemplo@ejemlo.com"
                                    required="required"/>
                         </div>
-                        <br/>
 
                         <div>
                             <label>Mensaje:</label>
@@ -170,7 +184,6 @@
                                       required="required"></textarea>
                             <!--<button name="btsend" id="btsend" type="submit" class="button1">Enviar</button>-->
                         </div>
-                        <br/>
 
                         <div>
                             <br>
@@ -186,15 +199,16 @@
             <!-- column (right)-->
             <div class="one-column">
                 <!-- content -->
-                <p><img  style="border-radius: 15px;" src="img/dummies/mapa.png" alt="map"></p>
+                <p><img style="border-radius: 15px;" src="img/dummies/mapa.png" alt="map"></p>
 
-                <p style="background:#f5f5f5; border-radius: 15px; text-align: center; width: 375px;">Andonaegui 5676<br/>
+                <p style="background:#f5f5f5; border-radius: 15px; text-align: center; width: 375px;">Andonaegui
+                    5676<br/>
                     Gonzalez Catán<br/>
                     Buenos Aires<br/>
                     Argentina<br/>
                     Tel: 011-5274-8501/8516
                     Tel/FAX: (02202) 431260
-                    comercializacion@tecno-partes.com.ar
+                    comercializacion@tecno-partes.com.ar</p>
                 <!-- ENDS content -->
             </div>
             <!-- ENDS column -->
@@ -231,35 +245,47 @@
             <li class="col">
                 <h6>Productos</h6>
                 <ul>
-                    <li class="page_item"><a href="index.html">Home</a></li>
-                    <li class="page_item"><a href="features.html">Features</a></li>
-                    <li class="page_item"><a href="blog.html">Blog</a></li>
-                    <li class="page_item"><a href="portfolio.html">Portfolio</a></li>
-                    <li class="page_item"><a href="gallery.html">Gallery</a></li>
-                    <li class="page_item"><a href="contact.html">Contact</a></li>
+                    <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
+                    <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="blog.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
+                    <li class="page_item"><a href="gallery.html">Accesorios</a></li>
+                    <li class="page_item"><a href="contact.html">Tanques</a></li>
+                    <li class="page_item"><a href="contact.html">Especiales</a></li>
                 </ul>
             </li>
 
             <li class="col">
                 <h6>Tecno-Partes</h6>
-                <ul>
-                    <li><a href="#">Webdesign projects senectus</a></li>
-                    <li><a href="#/">Wordpress projects senectus</a></li>
-                    <li><a href="#">Vestibulum tortor quam</a></li>
-                    <li><a href="#">Code projects amet quam egestas</a></li>
-                    <li><a href="#">Web design projects senectus</a></li>
-                    <li><a href="#/">Marketplace projects</a></li>
-                    <li><a href="#">Writting projects senectus</a></li>
-                    <li><a href="#">Drawings projects fames Aenean</a></li>
-                    <li><a href="#/">Wordpress projects Aenean ultricies</a></li>
-                </ul>
+
+                <p>Somos una empresa dedicada hace mas de 20 años al diseño, desarrolo y producción de productos en
+                    plastico reforzado con fibra de vidrio.</p>
+
+                <p>Durante estos años, hemos orientado todos nuestros recursos a las transformaciones de la cambiante y
+                    sorprendente industria</p>
+
+                <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
+                    constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
+                <!--<ul>-->
+                <!--<li><a href="#">Somos una empresa</a></li>-->
+                <!--<li><a href="#/">Wordpress projects senectus</a></li>-->
+                <!--<li><a href="#">Vestibulum tortor quam</a></li>-->
+                <!--<li><a href="#">Code projects amet quam egestas</a></li>-->
+                <!--<li><a href="#">Web design projects senectus</a></li>-->
+                <!--<li><a href="#/">Marketplace projects</a></li>-->
+                <!--<li><a href="#">Writting projects senectus</a></li>-->
+                <!--<li><a href="#">Drawings projects fames Aenean</a></li>-->
+                <!--<li><a href="#/">Wordpress projects Aenean ultricies</a></li>-->
+                <!--</ul>-->
             </li>
             <li class="col">
                 <h6>Contacto</h6>
-                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-                tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas
-                semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Cursus faucibus, tortor neque
-                egestas augue, eu vulputate magna eros.
+
+                Andonaegui 5676, Gonzalez Catán<br/>
+                Buenos Aires, Argentina<br/>
+                Tel: 011-5274-8501/8516
+                Tel/FAX: (02202) 431260
+                comercializacion@tecno-partes.com.ar
             </li>
 
         </ul>
@@ -274,17 +300,19 @@
 <div id="bottom">
     <!-- wrapper-bottom -->
     <div class="wrapper">
-        <div id="bottom-text">Power by <a href="http://www.flipstudios.com"> flipstudios.com</a></div>
+        <div id="bottom-text">Power by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;"
+                                                                                    src="img/footer/logo_footer.png"></a>
+        </div>
         <!-- Social -->
         <ul class="social ">
-            <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Become a fan"></a></li>
-            <li><a href="http://www.twitter.com" class="poshytip twitter" title="Follow our tweets"></a></li>
-            <li><a href="http://www.youtube.com" class="poshytip youtube" title="View our videos"></a></li>
+            <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Visitanos en facebook"></a></li>
+            <li><a href="http://www.twitter.com" class="poshytip twitter" title="Seguinos en twitter"></a></li>
+            <li><a href="http://www.youtube.com" class="poshytip youtube" title="Vea nuestros videos"></a></li>
         </ul>
         <!-- ENDS Social -->
         <div id="to-top" class="poshytip" title="To top"></div>
-    </div>
-    <!-- ENDS wrapper-bottom -->
+            </div>
+            <!-- ENDS wrapper-bottom -->
 </div>
 <!-- ENDS Bottom -->
 
