--- a/src/index.html
+++ b/src/index.html
@@ -128,12 +128,12 @@
 <div id="slider-block">
     <div id="slider-holder">
         <div id="slider">
-            <a href="http://www.luiszuno.com"><img src="images/01.jpg"
-                                                   title="Visit my web site regularly and get freebies each week!"
-                                                   alt=""/></a>
-            <a href="http://themeforest.net/user/Ansimuz/portfolio?ref=ansimuz"><img src="images/02.jpg"
-                                                                                     title="Support the freebies buying high quality premium themes from my portfolio at themeforest"
-                                                                                     alt=""/></a>
+            <a href="http://tecno-partes.com.ar/"><img src="images/slide1.png"
+                                                       title="Bienvenidos!!"
+                                                       alt=""/></a>
+            <a href="contact.html"><img src="images/slide2.png"
+                                        title="Contactanos"
+                                        alt=""/></a>
         </div>
     </div>
 </div>
@@ -168,44 +168,34 @@
                 <div>
                     <ul class="blocks-thumbs thumbs-rollover">
                         <li>
-                            <a href="single.html" class="thumb" title="An image"><img src="img/dummies/282x150.gif"
+                            <a href="single.html" class="thumb" title="An image"><img src="img/dummies/recent1.png"
                                                                                       alt="Post"/></a>
 
                             <div class="excerpt">
-                                <a href="single.html" class="header">Modelo de Cabian para maquinas Caterpillar modelo
+                                <a href="single.html" class="header">Modelo de Cabian para máquinas Caterpillar modelo
                                     CP533E</a>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                                egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
-                                Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-                                placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
+
                             </div>
                             <a href="single.html" class="link-button"><span>Leer Mas &#8594;</span></a>
                         </li>
                         <li>
-                            <a href="single.html" class="thumb" title="An image"><img src="img/dummies/282x150.gif"
+                            <a href="single.html" class="thumb" title="An image"><img src="img/dummies/recent2.png"
                                                                                       alt="Post"/></a>
 
-                            <div class="excerpt">
-                                <a href="single.html" class="header">Modelo de Cabian para maquinas Caterpillar modelo
-                                    CP533E</a>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                                egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
-                                Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-                                placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
+                            <div class="excerpt"> <br/>
+                                <a href="single.html" class="header">Nueva cabina para autos BOBCAT 2200 4x4</a>
+
                             </div>
                             <a href="single.html" class="link-button"><span>Leer Mas &#8594;</span></a>
                         </li>
                         <li>
-                            <a href="single.html" class="thumb" title="An image"><img src="img/dummies/282x150.gif"
+                            <a href="single.html" class="thumb" title="An image"><img src="img/dummies/clientesTP.png"
                                                                                       alt="Post"/></a>
 
                             <div class="excerpt">
-                                <a href="single.html" class="header">Modelo de Cabian para maquinas Caterpillar modelo
-                                    CP533E</a>
-                                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                                egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
-                                Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris
-                                placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
+                                <a href="single.html" class="header">Estos son algunos de los cllientes que confían en
+                                    nosotros.</a>
+
                             </div>
                             <a href="single.html" class="link-button"><span>Leer Mas &#8594;</span></a>
                         </li>
@@ -297,21 +287,6 @@
 </div>
 <!-- ENDS MAIN -->
 
-<!-- Twitter -->
-<div id="twitter">
-    <div class="wrapper">
-        <a href="#" id="prev-tweet"></a>
-        <a href="#" id="next-tweet"></a>
-        <img id="bird" src="img/bird.png" alt="Tweets"/>
-
-        <div id="tweets">
-            <ul class="tweet_list"></ul>
-        </div>
-    </div>
-</div>
-<!-- ENDS Twitter -->
-
-
 <!-- FOOTER -->
 <div id="footer">
     <!-- wrapper-footer -->
@@ -321,35 +296,47 @@
             <li class="col">
                 <h6>Productos</h6>
                 <ul>
-                    <li class="page_item"><a href="index.html">Home</a></li>
-                    <li class="page_item"><a href="features.html">Features</a></li>
-                    <li class="page_item"><a href="blog.html">Blog</a></li>
-                    <li class="page_item"><a href="portfolio.html">Portfolio</a></li>
-                    <li class="page_item"><a href="gallery.html">Gallery</a></li>
-                    <li class="page_item"><a href="contact.html">Contact</a></li>
+                    <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
+                    <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="blog.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
+                    <li class="page_item"><a href="gallery.html">Accesorios</a></li>
+                    <li class="page_item"><a href="contact.html">Tanques</a></li>
+                    <li class="page_item"><a href="contact.html">Especiales</a></li>
                 </ul>
             </li>
 
             <li class="col">
                 <h6>Tecno-Partes</h6>
-                <ul>
-                    <li><a href="#">Webdesign projects senectus</a></li>
-                    <li><a href="#/">Wordpress projects senectus</a></li>
-                    <li><a href="#">Vestibulum tortor quam</a></li>
-                    <li><a href="#">Code projects amet quam egestas</a></li>
-                    <li><a href="#">Web design projects senectus</a></li>
-                    <li><a href="#/">Marketplace projects</a></li>
-                    <li><a href="#">Writting projects senectus</a></li>
-                    <li><a href="#">Drawings projects fames Aenean</a></li>
-                    <li><a href="#/">Wordpress projects Aenean ultricies</a></li>
-                </ul>
+
+                <p>Somos una empresa dedicada hace mas de 20 años al diseño, desarrolo y producción de productos en
+                    plastico reforzado con fibra de vidrio.</p>
+
+                <p>Durante estos años, hemos orientado todos nuestros recursos a las transformaciones de la cambiante y
+                    sorprendente industria</p>
+
+                <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
+                    constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
+                <!--<ul>-->
+                <!--<li><a href="#">Somos una empresa</a></li>-->
+                <!--<li><a href="#/">Wordpress projects senectus</a></li>-->
+                <!--<li><a href="#">Vestibulum tortor quam</a></li>-->
+                <!--<li><a href="#">Code projects amet quam egestas</a></li>-->
+                <!--<li><a href="#">Web design projects senectus</a></li>-->
+                <!--<li><a href="#/">Marketplace projects</a></li>-->
+                <!--<li><a href="#">Writting projects senectus</a></li>-->
+                <!--<li><a href="#">Drawings projects fames Aenean</a></li>-->
+                <!--<li><a href="#/">Wordpress projects Aenean ultricies</a></li>-->
+                <!--</ul>-->
             </li>
             <li class="col">
                 <h6>Contacto</h6>
-                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-                tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas
-                semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Cursus faucibus, tortor neque
-                egestas augue, eu vulputate magna eros.
+
+                Andonaegui 5676, Gonzalez Catán<br/>
+                Buenos Aires, Argentina<br/>
+                Tel: 011-5274-8501/8516
+                Tel/FAX: (02202) 431260
+                comercializacion@tecno-partes.com.ar
             </li>
 
         </ul>
@@ -359,17 +346,16 @@
 </div>
 <!-- ENDS FOOTER -->
 
-
 <!-- Bottom -->
 <div id="bottom">
     <!-- wrapper-bottom -->
     <div class="wrapper">
-        <div id="bottom-text">Power by  <a href="http://www.flipstudios.com"> flipstudios.com</a></div>
+        <div id="bottom-text">Power by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;" src="img/footer/logo_footer.png"></a></div>
         <!-- Social -->
         <ul class="social ">
-            <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Become a fan"></a></li>
-            <li><a href="http://www.twitter.com" class="poshytip twitter" title="Follow our tweets"></a></li>
-            <li><a href="http://www.youtube.com" class="poshytip youtube" title="View our videos"></a></li>
+            <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Visitanos en facebook"></a></li>
+            <li><a href="http://www.twitter.com" class="poshytip twitter" title="Seguinos en twitter"></a></li>
+            <li><a href="http://www.youtube.com" class="poshytip youtube" title="Vea nuestros videos"></a></li>
         </ul>
         <!-- ENDS Social -->
         <div id="to-top" class="poshytip" title="To top"></div>
