--- a/src/features.html
+++ b/src/features.html
@@ -111,7 +111,7 @@
                 <li class="current-menu-item"><a href="features.html">La Empresa</a>
 
                 </li>
-                <li><a href="blog.html">Productos</a></li>
+                <li><a href="gallery.html">Productos</a></li>
                 <li><a href="portfolio.html">Novedades</a></li>
                 <li><a href="contact.html">Contacto</a></li>
             </ul>
