--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
                 <li><a href="features.html">La Empresa</a>
 
                 </li>
-                <li><a href="blog.html">Productos</a></li>
+                <li><a href="gallery.html">Productos</a></li>
                 <li><a href="portfolio.html">Novedades</a></li>
                 <li><a href="contact.html">Contacto</a></li>
             </ul>
@@ -350,7 +350,7 @@
 <div id="bottom">
     <!-- wrapper-bottom -->
     <div class="wrapper">
-        <div id="bottom-text">Power by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;" src="img/footer/logo_footer.png"></a></div>
+        <div id="bottom-text">Powered by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;" src="img/footer/logo_footer.png"></a></div>
         <!-- Social -->
         <ul class="social ">
             <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Visitanos en facebook"></a></li>
