--- a/src/features.html
+++ b/src/features.html
@@ -148,83 +148,46 @@
 
                     <p>Tecno-Partes es una empresa Argentina, dedicada al diseño, desarrollo, y productos realizados
                         en plástico reforzado con fibra de vidrio para el abastecimiento de diversos mercados</p>
+
+                    <p>Con mas de 20 años de trayectoria, la empresa es lider de fabricación de cabinas y componentes
+                        para maquinaria agrícola y vial.</p>
                 </div>
                 <div class="one-half last">
-                    <h6 class="line-divider">One half</h6>
+                    <h6 class="line-divider"> Tecno</h6>
 
-                    <iframe width="100%" height="100%" type="text/html" src="http://www.youtube.com/embed/dQ8GXj1TsVY"
-                            frameborder="0"></iframe>
+                    <img src="img/logo2.png">
                 </div>
                 <div class="clear "></div>
                 <!-- ENDS 2 cols -->
 
-                <!-- 2/3 cols -->
-
-                <div class="two-third last">
-                    <h6 class="line-divider">Two thirds</h6>
-
-                    <p>Pellentesque vit habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                        Vestibulum tortor quam, feugiat Aenean fermentum, it sapien ullamcorper pharetra. Vestibulum
-                        erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. vit Aenean fermentum, Aenean
-                        fermentum, Aenean fermentum, Aenean fermentum, elit eget tincidunt condimentum, eros ipsum
-                        rutrum orci, sagittis tempus.</p>
-                </div>
-                <div class="one-third">
-                    <h6 class="line-divider">One third </h6>
-
-                   <img src="./img/plus-sign.png">
-                </div>
-
-                <div class="clear "></div>
-                <!-- ENDS 2/3 cols -->
-
-                <!--&lt;!&ndash; 1/4 cols &ndash;&gt;-->
-
-                <!--<div class="two-third ">-->
-                <!--<h6 class="line-divider">Quienes Somos?</h6>-->
-
-                <!--<p>Tecno-Partes es una empresa Argentina, dedicada al diseño, desarrollo, y productos realizados en-->
-                <!--plastico reforzado con fibra de vidrio para el abastecimiento de diversos mercados</p>-->
-                <!--</div>-->
-                <!--<div class="one-fourth last">-->
-                <!--<h6 class="line-divider">Nuestra Empresa</h6>-->
-
-                <!--<iframe width="100%" height="100%" type="text/html" src="http://www.youtube.com/embed/dQ8GXj1TsVY"-->
-                <!--frameborder="0"></iframe>-->
-                <!--</div>-->
-                <!--<div class="clear "></div>-->
-                <!--&lt;!&ndash; ENDS 1/4 cols &ndash;&gt;-->
-
                 <!-- 2 cols -->
                 <div class="one-half">
-                    <h6 class="line-divider">Quienes Somos?</h6>
+                    <h6 class="line-divider">Sobre Tecno Partes</h6>
 
                     <!-- toggle -->
                     <h6 class="toggle-trigger"><a href="#">Nuestra Visión</a></h6>
 
                     <div class="toggle-container">
                         <div class="block">
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                                egestas. Vestibulum tortor wisi. Aenean fermentum, elit eget tincidunt condimentum, eros
-                                ipsum rutrum orci, sagittis tempus lacus enim ac dui. </p>
+                            <p>"Ser pioneros en cada segmento que nos involucre, realizando nuestro trabajo con
+                                efectividad y eficiencia" </p>
                         </div>
                     </div>
                     <h6 class="toggle-trigger"><a href="#">Nuestra Misión</a></h6>
 
                     <div class="toggle-container">
                         <div class="block">
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                                egestas. Vestibulum tortor wisi. Aenean fermentum, elit eget tincidunt condimentum, eros
-                                ipsum rutrum orci, sagittis tempus lacus enim ac dui. </p>
+                            <p>"Hacer de nuestro trabajo diario, la satifacción de nuestros clientes" </p>
                         </div>
                     </div>
                     <h6 class="toggle-trigger"><a href="#">Nuestros Valores</a></h6>
 
                     <div class="toggle-container">
                         <div class="block">
-                            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                                egestas. Vestibulum tortor wisi. Aenean fermentum, elit eget tincidunt condimentum, eros
-                                ipsum rutrum orci, sagittis tempus lacus enim ac dui. </p>
+                            <p>HONESTIDAD: Hacia nuestros integrantes, clientes y proveedores.<br/>
+                                RESPETO: Hacia todo y hacia todos. <br/>
+                                LEALTAD: Hacia nuestros clientes, productos y mercado. <br/>
+                                COMPROMISO: Por nuestro trabajo diario, y hacia nuestros valores mismos<br/></p>
                         </div>
                     </div>
 
@@ -232,12 +195,15 @@
                     <!-- ENDS toggle -->
                 </div>
                 <div class="one-half last">
-                    <h6 class="line-divider">One half</h6>
+                    <h6 class="line-divider">Nuestro trabajo</h6>
 
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                        Vestibulum tortor quam, feugamet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-                        ultricies mi vit, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt
-                        condimentum, eros ipsum rutrum orci, sagittis tempus.</p>
+                    <p>Brindamos soluciones únicas y creativas que le aporten valor a las necesidades de sus Clientes,
+                        Tecno Partes es una empresa dinámica que brinda atención personalizada y trabajo en conjunto,
+                        tanto a los grandes fabricantes como a los usuarios finales.
+
+                        Hoy, la empresa cuenta con una capacidad productiva de más de 3.000 mts2 donde se desarrollan
+                        las áreas productiva, técnica y administrativa. Dotada de maquinaria y herramental de primer
+                        nivel, abastece un mercado cada vez más exigente con productos de calidad superior.</p>
                 </div>
                 <div class="clear "></div>
                 <!-- ENDS 2 cols -->
@@ -274,37 +240,49 @@
         <!-- footer-cols -->
         <ul id="footer-cols">
             <li class="col">
-                <h6>Pages</h6>
+                <h6>Productos</h6>
                 <ul>
-                    <li class="page_item"><a href="index.html">Home</a></li>
-                    <li class="page_item"><a href="features.html">Features</a></li>
-                    <li class="page_item"><a href="blog.html">Blog</a></li>
-                    <li class="page_item"><a href="portfolio.html">Portfolio</a></li>
-                    <li class="page_item"><a href="gallery.html">Gallery</a></li>
-                    <li class="page_item"><a href="contact.html">Contact</a></li>
+                    <li class="page_item"><a href="index.html">Cabinas Adaptables</a></li>
+                    <li class="page_item"><a href="features.html">Cabinas Agrícolas</a></li>
+                    <li class="page_item"><a href="blog.html">Cabinas Tractores</a></li>
+                    <li class="page_item"><a href="portfolio.html">Cabinas Viales</a></li>
+                    <li class="page_item"><a href="gallery.html">Accesorios</a></li>
+                    <li class="page_item"><a href="contact.html">Tanques</a></li>
+                    <li class="page_item"><a href="contact.html">Especiales</a></li>
                 </ul>
             </li>
 
             <li class="col">
-                <h6>Categories</h6>
-                <ul>
-                    <li><a href="#">Webdesign projects senectus</a></li>
-                    <li><a href="#/">Wordpress projects senectus</a></li>
-                    <li><a href="#">Vestibulum tortor quam</a></li>
-                    <li><a href="#">Code projects amet quam egestas</a></li>
-                    <li><a href="#">Web design projects senectus</a></li>
-                    <li><a href="#/">Marketplace projects</a></li>
-                    <li><a href="#">Writting projects senectus</a></li>
-                    <li><a href="#">Drawings projects fames Aenean</a></li>
-                    <li><a href="#/">Wordpress projects Aenean ultricies</a></li>
-                </ul>
+                <h6>Tecno-Partes</h6>
+
+                <p>Somos una empresa dedicada hace mas de 20 años al diseño, desarrolo y producción de productos en
+                    plastico reforzado con fibra de vidrio.</p>
+
+                <p>Durante estos años, hemos orientado todos nuestros recursos a las transformaciones de la cambiante y
+                    sorprendente industria</p>
+
+                <p>Calidad, solidez y respuesta son los patrones que nos permiten que sigamos innovando en manera
+                    constante, acompañando a nuestros clientes en el desarrollo de sus proyectos</p>
+                <!--<ul>-->
+                <!--<li><a href="#">Somos una empresa</a></li>-->
+                <!--<li><a href="#/">Wordpress projects senectus</a></li>-->
+                <!--<li><a href="#">Vestibulum tortor quam</a></li>-->
+                <!--<li><a href="#">Code projects amet quam egestas</a></li>-->
+                <!--<li><a href="#">Web design projects senectus</a></li>-->
+                <!--<li><a href="#/">Marketplace projects</a></li>-->
+                <!--<li><a href="#">Writting projects senectus</a></li>-->
+                <!--<li><a href="#">Drawings projects fames Aenean</a></li>-->
+                <!--<li><a href="#/">Wordpress projects Aenean ultricies</a></li>-->
+                <!--</ul>-->
             </li>
             <li class="col">
-                <h6>About the theme</h6>
-                Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-                tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas
-                semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Cursus faucibus, tortor neque
-                egestas augue, eu vulputate magna eros.
+                <h6>Contacto</h6>
+
+                Andonaegui 5676, Gonzalez Catán<br/>
+                Buenos Aires, Argentina<br/>
+                Tel: 011-5274-8501/8516
+                Tel/FAX: (02202) 431260
+                comercializacion@tecno-partes.com.ar
             </li>
 
         </ul>
@@ -314,20 +292,18 @@
 </div>
 <!-- ENDS FOOTER -->
 
-
 <!-- Bottom -->
 <div id="bottom">
     <!-- wrapper-bottom -->
     <div class="wrapper">
-        <div id="bottom-text">2011 Nova all rights reserved. <a href="http://www.luiszuno.com"> Luiszuno.com</a></div>
+        <div id="bottom-text">Power by <a href="http://www.flipstudios.com.ar"><img style="margin-bottom: -16px;"
+                                                                                    src="img/footer/logo_footer.png"></a>
+        </div>
         <!-- Social -->
         <ul class="social ">
-            <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Become a fan"></a></li>
-            <li><a href="http://www.twitter.com" class="poshytip twitter" title="Follow our tweets"></a></li>
-            <li><a href="http://www.dribbble.com" class="poshytip dribbble" title="View our work"></a></li>
-            <li><a href="http://www.addthis.com" class="poshytip addthis" title="Tell everybody"></a></li>
-            <li><a href="http://www.vimeo.com" class="poshytip vimeo" title="View our videos"></a></li>
-            <li><a href="http://www.youtube.com" class="poshytip youtube" title="View our videos"></a></li>
+            <li><a href="http://www.facebook.com" class="poshytip  facebook" title="Visitanos en facebook"></a></li>
+            <li><a href="http://www.twitter.com" class="poshytip twitter" title="Seguinos en twitter"></a></li>
+            <li><a href="http://www.youtube.com" class="poshytip youtube" title="Vea nuestros videos"></a></li>
         </ul>
         <!-- ENDS Social -->
         <div id="to-top" class="poshytip" title="To top"></div>
