--- a/src/gallery.html
+++ b/src/gallery.html
@@ -152,7 +152,10 @@
                             <li><a href="#" data-filter=".viales" > Cabinas Viales </a></li>
                             <li><a href="#" data-filter=".accesorios" > Accesorios </a></li>
                             <li><a href="#" data-filter=".tanques" > Tanques </a></li>
-                            <li><a href="#" data-filter=".especiales" > Especiales </a></li>
+                            <li><a href="#" data-filter=".sillones" > Sillones </a></li>
+                            <li><a href="#" data-filter=".cuchas" > Cuchas </a></li>
+                            <li><a href="#" data-filter=".juegos" > Juegos </a></li>
+                            <li><a href="#" data-filter=".desarrollos" > Desarrollos </a></li>
 				    	</ul>
 						<!-- ENDS filter -->
 						
